# ranger_tmux

./: .flake8  .pre-commit-config.yaml  README.md  __init__.py  cwd_sync.py  cwd_track.py  drop_ranger.py  drop_ranger.sh  dropdown.py  open_in_window.py  pyproject.toml  set_window_name.py  util.py
ranger_plugins/ranger_tmux/: drop.py  dropdown.py  splits.py
ranger_tmux/: __init__.py  __main__.py  cwd_sync.py  cwd_track.py  drop.py  dropdown.py  open_in_window.py  panel.py  plugin.py  set_window_name.py  util.py
scripts/: publish.py
